[gd_scene load_steps=28 format=3 uid="uid://cfnrq0yp4tyrd"]

[ext_resource type="Texture2D" uid="uid://c5kq41umxqmc6" path="res://Pixel/Ship-Nebula - Sprite Sheet.png" id="1_7k6o5"]
[ext_resource type="Script" path="res://PlayerShip/ship.gd" id="1_mdlkd"]
[ext_resource type="Script" path="res://Components/move_component.gd" id="2_0g4h8"]
[ext_resource type="Script" path="res://Components/move_input_component.gd" id="3_6il7y"]
[ext_resource type="Resource" uid="uid://d2gyjbtj3cpqr" path="res://PlayerShip/ship_move_stats.tres" id="4_jqheb"]
[ext_resource type="Script" path="res://Components/position_clamp_component.gd" id="5_2g2bx"]
[ext_resource type="Script" path="res://Components/spawner_component.gd" id="7_i65ov"]
[ext_resource type="PackedScene" uid="uid://dgvmd3vsufgbd" path="res://Projectiles/laser.tscn" id="8_tiy2s"]
[ext_resource type="Script" path="res://Components/scale_component.gd" id="9_ap3dl"]
[ext_resource type="Script" path="res://Components/stats_component.gd" id="10_po72a"]
[ext_resource type="Script" path="res://Components/hurtbox_component.gd" id="11_2nrpu"]
[ext_resource type="Script" path="res://Components/hurt_component.gd" id="12_uwmpo"]
[ext_resource type="PackedScene" uid="uid://f2khkhnhvp6u" path="res://effects/explosion_effect.tscn" id="13_joh8n"]
[ext_resource type="Script" path="res://Components/destroyed_component.gd" id="14_syux7"]
[ext_resource type="AudioStream" uid="uid://b58ncellhgsk3" path="res://sounds/laser_sound.wav" id="15_os7t8"]
[ext_resource type="Script" path="res://Components/variable_pitch_audio_stream_player.gd" id="15_v2k6p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nokig"]
atlas = ExtResource("1_7k6o5")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x6eg"]
atlas = ExtResource("1_7k6o5")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pywi"]
atlas = ExtResource("1_7k6o5")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xphen"]
atlas = ExtResource("1_7k6o5")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxe8"]
atlas = ExtResource("1_7k6o5")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fyam"]
atlas = ExtResource("1_7k6o5")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahwnp"]
atlas = ExtResource("1_7k6o5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wllci"]
atlas = ExtResource("1_7k6o5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjy5m"]
atlas = ExtResource("1_7k6o5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jbjq"]
atlas = ExtResource("1_7k6o5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_47j4u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nokig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x6eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pywi")
}],
"loop": true,
"name": &"bank_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xphen")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxe8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fyam")
}],
"loop": true,
"name": &"bank_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahwnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wllci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjy5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jbjq")
}],
"loop": true,
"name": &"center",
"speed": 10.0
}]

[node name="Ship" type="Node2D"]
script = ExtResource("1_mdlkd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 2)
sprite_frames = SubResource("SpriteFrames_47j4u")
animation = &"center"
autoplay = "center"
frame_progress = 0.488412

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_0g4h8")
actor = NodePath("..")

[node name="MoveInputComponent" type="Node" parent="." node_paths=PackedStringArray("move_component")]
script = ExtResource("3_6il7y")
move_stats = ExtResource("4_jqheb")
move_component = NodePath("../MoveComponent")

[node name="PositionClampComponent" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("5_2g2bx")
actor = NodePath("..")

[node name="LeftMuzzle" type="Marker2D" parent="."]
position = Vector2(-8, -2)

[node name="RightMuzzle" type="Marker2D" parent="."]
position = Vector2(8, -2)

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("7_i65ov")
scene = ExtResource("8_tiy2s")

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("9_ap3dl")
sprite = NodePath("../AnimatedSprite2D")
scale_amount = Vector2(1.2, 1.2)

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("10_po72a")

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_mask = 0
script = ExtResource("11_2nrpu")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HurtboxComponent"]
polygon = PackedVector2Array(-15, 3, -5, -4, -3, -4, -3, -9, -1, -11, 1, -11, 3, -9, 3, -4, 5, -4, 15, 3, 15, 8, 14, 9, 9, 9, 9, 10, 7, 10, 7, 9, 4, 9, 2, 11, -2, 11, -4, 9, -7, 9, -7, 10, -9, 10, -9, 9, -14, 9, -15, 8)

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("12_uwmpo")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")

[node name="Explosion" type="Node2D" parent="."]
script = ExtResource("7_i65ov")
scene = ExtResource("13_joh8n")

[node name="DestroyedComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "destroy_effect_spawner_component")]
script = ExtResource("14_syux7")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
destroy_effect_spawner_component = NodePath("../Explosion")

[node name="VariablePitchAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_os7t8")
bus = &"Sounds"
script = ExtResource("15_v2k6p")
